--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version":"1.0.0",
   "description":"server",
   "main":"server.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "test":"echo \"Error: no test specified\" && exit 1",
-    "build":"cd app && npm run build",
-    "install-client":"cd app && npm install",
-    "heroku-postbuild":"npm run install-client && npm run buid",
-    "client":"cd app && npm start",
+     "test":"echo \"Error: no test specified\" && exit 1",
+     "build":"npm install &&  npm run build-client",
+     "install-client":"cd app && npm install",
+     "build-client": "cd client && npm install && npm run build",
+   "client":"cd app && npm start",
     "start":"node server.js",
     "dev":"nodemon server.js"
   },
