--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
      "test":"echo \"Error: no test specified\" && exit 1",
      "build":"npm install &&  npm run build-client",
      "install-client":"cd app && npm install",
-     "build-client": "cd client && npm install && npm run build",
+     "build-client": "cd app && npm install && npm run build",
    "client":"cd app && npm start",
     "start":"node server.js",
     "dev":"nodemon server.js"
