--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
      "test":"echo \"Error: no test specified\" && exit 1",
-     "build":"npm install &&  npm run build-client",
+     "build":"npm run build-client",
      "install-client":"cd app && npm install",
      "build-client": "cd app && npm install && npm run build",
    "client":"cd app && npm start",
