tout fonctionne en local

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bookface_project_frontend",
+    "name": "nosartisans",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
