--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name":"server",
-  "version":"1.0.0",
-  "description":"server",
-  "main":"server.js",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "server",
+  "main": "server.js",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
-     "test":"echo \"Error: no test specified\" && exit 1",
-     "build":"npm run build-client",
-     "install-client":"cd app && npm install",
-     "build-client": "cd app && npm install && npm run build",
-   "client":"cd app && npm start",
-    "start":"node server.js",
-    "dev":"nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build-client",
+    "install-client": "cd app && npm install",
+    "build-client": "cd app && npm install && npm run build",
+    "client": "cd app && npm start",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "author":"Clara Climent",
-  "license":"ISC",
+  "author": "Clara Climent",
+  "license": "ISC",
   "dependencies": {
-    "bcrypt":"^5.0.1",
-    "bcryptjs":"^2.4.3",
-    "body-parser":"^1.19.1",
-    "cookie-parser":"^1.4.6",
-    "cors":"^2.8.5",
-    "dotenv":"^10.0.0",
-    "express":"^4.17.2",
-    "jsonwebtoken":"^8.5.1",
-    "mongoose":"^6.1.8",
-    "mongoose-unique-validator":"^3.0.0",
-    "morgan":"^1.10.0",
-    "node":"^17.4.0",
-    "nodemon":"^2.0.15",
-    "validator":"^13.7.0"
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.8",
+    "mongoose-unique-validator": "^3.0.0",
+    "morgan": "^1.10.0",
+    "node": "^17.4.0",
+    "nodemon": "^2.0.15",
+    "validator": "^13.7.0"
   }
 }
